# aura-sdd

./: .gitignore  AGENTS.md  BIOME_README.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.TEMPLATE  README.md  TECH_OPS_EXECUTION_PLAN.md  biome.json  dev-startup.sh  docker-compose.yml  package-lock.json  package.json  pnpm-workspace.yaml  workspace-implementation-summary.md
.aura/: constitution.md  glossary.md
.aura/tasks/: AURA-003.md  AURA-004.md  VOICE-004.md  VOICEOPS-001.md  VOICEOPS-002.md  VOICEOPS-003.md  VOICEOPS-004.md  VOPS-001.md
.aura/tasks/AURA-003/: index.md
.aura/tasks/AURA-003/research/: 2025-10-27-advanced-technical-research.md  2025-10-27-executive-summary.md  2025-10-27-implementation-roadmap.md  2025-10-27-product-market-analysis.md  2025-10-27-technical-architecture.md
.aura/tasks/AURA-004/: index.md
.aura/tasks/AURA-004/docs/: 2025-10-27-enhanced-technical-architecture.md  2025-10-27-implementation-plan.md  2025-10-27-quality-gates.md  2025-10-27-risk-assessment.md
.aura/tasks/AURA-004/research/: 2025-10-27-langgraph-langchain-research.md  2025-10-28-embedding-models-comparison.md  2025-10-28-open-source-packaging-guide.md  2025-10-28-package-dependencies-analysis.md  2025-10-28-research-summary.md  2025-10-28-vector-search-architecture-research.md
.aura/tasks/AURA-004/subtasks/: AURA-004-001-core-infrastructure.md  AURA-004-002-code-analysis-engine.md  AURA-004-003-ai-coding-agent.md  AURA-004-004-memory-context-system.md  AURA-004-005-packaging-distribution.md  index.md
.aura/tasks/VOICE-004/design/: 2025-10-27-implementation-roadmap.md  2025-10-27-security-privacy.md  2025-10-27-technical-specifications.md  2025-10-27-ux-design.md  2025-10-27-voice-architecture.md  index.md
.aura/templates/: README.md  constitution.template.md  glossary.template.md  task-template.md
.claude/agents/: architect.md  product-ops.md  qa.md  tech-lead.md
.claude/skills/code/: README.md  SKILL.md
.claude/skills/code/examples/: context7-integration-example.md
.claude/skills/code/language-templates/: python-template.md
.claude/skills/code/tools/: context7-search.py
.claude/skills/context-management/: README.md  SKILL.md
.claude/skills/design/: README.md  SKILL.md
.claude/skills/planning/: README.md  SKILL.md
.claude/skills/qa/: README.md  SKILL.md
.claude/skills/research/: README.md  SKILL.md
.claude/skills/technical-writing/: README.md  SKILL.md
.github/workflows/: ci.yml  deploy.yml  docker-build.yml
.spec/: STATE_MACHINE_IMPLEMENTATION_SUMMARY.md  constitution.md  glossary.md  references.json  register.json
.spec/agents/: architect.agent.md  product-ops.agent.md  product.agent.md  qa.agent.md  tech-lead.agent.md
.spec/commands/: agile-plan.command.md  analytics-research.command.md  architect-plan.command.md  code-implement.command.md  code-review.command.md  code-unit.command.md  general-compact.command.md  general-research.command.md  pm-sync.command.md  product-prd.command.md  qa-contract.command.md  qa-e2e.command.md  qa-stress.command.md
.spec/skills/: agile-plan.skill.md  agile-planning.skill.md  analytics-research.skill.md  api-development.skill.md  architect-plan.skill.md  code-development.skill.md  code-implement.skill.md  code-quality.skill.md  code-review.skill.md  code-unit.skill.md  context-compact.skill.md  context.snapshot.skill.md  database-development.skill.md  devops-automation.skill.md  frontend-development.skill.md  planning.skill.md  pm-sync.skill.md  product-discovery.skill.md  product-prd.skill.md  qa-contract.skill.md  qa-e2e.skill.md  qa-ready.skill.md  qa-stress.skill.md  qa-testing.skill.md  research-analysis.skill.md  research.skill.md
.spec/tasks/: CHAT-001.md  CHAT-002.md  CHAT-003.md  CHAT-004.md  CHAT-005.md  SPEC-001.md  SPEC-002.md
.spec/templates/: agent-template.md  agent.template.md  constitution.template.md  glossary.template.md  skill-template.md  skill.template.md  task-best-practices.md  task-template.md
apps/api/: .eslintrc.cjs  DEMO_USER_STORIES.md  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
apps/api/.spec/: Agents.md  constitution.md  constitution.yaml  glossary.md
apps/api/src/: app.ts  demo-server.ts  server.ts
apps/chat-api/: .env.example  .eslintrc.cjs  DEMO_API_SCRIPT.md  DEMO_PRESENTATION.md  README.md  jest.config.js  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  tsup.config.ts  vitest.config.ts
apps/chat-api/.spec/: Agents.md
apps/chat-api/src/: app.module.ts  app.ts  demo-server.ts  main.ts  server.ts  simple-demo.js
apps/chat-app/: .eslintrc.cjs  README.md  package-lock.json  package.json  vite.config.ts  vitest.config.ts
apps/chat-app/.spec/: constitution.md  constitution.yaml
apps/chat-app/src/: App.test.tsx  App.tsx  config.ts  main.tsx
apps/client/: .eslintrc.cjs  README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/client/.spec/: constitution.md  glossary.md
apps/client/src/: App.test.tsx  App.tsx  config.ts
apps/crm-client/: Dockerfile  package-lock.json
apps/crm-client/.spec/: Agents.md
apps/crm-client/src/: index.css  main.tsx
aura-004/: README.md  pyproject.toml
aura-004/examples/: agent_workflow.py  basic_usage.py
aura-004/src/aura_004/: __init__.py
aura-004/src/aura_004/analysis/: __init__.py  base.py  chunking.py  enhanced_analyzer.py  tree_sitter_analyzer.py
aura-004/src/aura_004/cli/: __init__.py  commands.py  main.py
aura-004/src/aura_004/core/: __init__.py  base.py  config.py  exceptions.py  graph.py  state.py
aura-004/src/aura_004/memory/: __init__.py  advanced_embeddings.py  advanced_retrieval.py  base.py  chroma_memory.py  embeddings.py  hierarchical_memory.py  knowledge_base.py  retrieval.py  schemas.py
aura-004/src/aura_004/production/: monitoring.py  security.py
aura-004/src/aura_004/tools/: langchain_tools.py
aura-004/src/aura_004/utils/: __init__.py  logging.py
aura-004/tests/: test_advanced_embeddings.py  test_basic.py
docs/: getting-started.md
tooling/: README.md
tooling/tesseract/: DEPLOYMENT.md  README.md
(+262 files in other folders)
